fix(docs): match inline code wrapping

--- a/docs/src/app.css
+++ b/docs/src/app.css
@@ -436,7 +436,7 @@
 	}
 
 	.mdsx code:not(pre code) {
-		@apply bg-muted relative rounded-md px-[0.3rem] py-[0.2rem] font-mono text-[0.8rem] outline-none;
+		@apply bg-muted relative rounded-md px-[0.3rem] py-[0.2rem] font-mono text-[0.8rem] break-words outline-none;
 	}
 
 	.super-debug {
